fixed css that prevented notifications dropdown and profile dropdown from being visible when the menu was in mimizied/small mode

--- a/src/Theme/resources/custom.css
+++ b/src/Theme/resources/custom.css
@@ -42,8 +42,7 @@
 
 .nav-sm .main_container .top_nav {
   display: block;
-  margin-left: 70px;
-  z-index: 2; }
+  margin-left: 70px; }
 
 .nav-sm .nav.side-menu li a {
   text-align: center !important;
